--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 
+h2 {
+  text-align: right;
+}
 ul {
   list-style: none;
+}
+li {
+  font-size: 18px;
 }
 img {
   width: 300px;
@@ -9,12 +15,15 @@ img {
 button {
   border-radius: 20px;
   color: black;
-  font-size: 16px;
+  /* font-size: 16px; */
   padding: 5px;
   padding-left: 10px;
   padding-right: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+.home-button {
+  margin-right: 30px;
 }
 .expand-button {
   margin-right: 30px;
@@ -55,11 +64,14 @@ a:active {
 .school-title-details {
   padding-left: 50px;
   padding-top: 150px;
-  font-size: 24px;
+  font-size: 18px;
 }
 @media only screen and (max-device-width: 480px) {
     button {
       font-size: 40px;
+    }
+    li {
+      font-size: 24px;
     }
     .school-title-details {
       padding-left: 50px;
